# agentic-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
agentic_newsletter/: __init__.py  cli.py
agentic_newsletter/article_grouper/: __init__.py  article_grouper_agent.py  openai_client.py  prompts.py  schemas.py
agentic_newsletter/bullet_point_generator/: __init__.py  bullet_point_generator_agent.py  openai_client.py  prompts.py  schemas.py
agentic_newsletter/config/: __init__.py  config.json  config_loader.py
agentic_newsletter/database/: __init__.py  article_group.py  base.py  bullet_point.py  bullet_point_log.py  database_manager.py  download_log.py  email.py  email_source.py  grouping_log.py  parser_log.py  (+3 more)
examples/: download_emails.py  group_and_store.py  parse_and_store.py  parse_newsletter.py
scripts/: add_email_sources.py  analyze_grouper_consistency.py  check_db_tables.py  check_parsed_articles.py  clear_parsed_data.py  download_from_sources.py  generate_bullet_points.py  generate_newsletter.py  generate_weekly_newsletter.sh  group_articles.py  migrate_add_bullet_point_metrics.py  migrate_add_bullet_point_tables.py  migrate_add_grouping_datetime.py  migrate_add_parsed_flag.py  migrate_add_source_url.py  migrate_add_specificity_score.py  migrate_article_categories.py  migrate_grouping_logs.py  migrate_parser_logs.py  migrate_remove_article_groups.py  migrate_remove_summary_and_grouping_datetime.py  parse_emails.py  summarize_text.py  sync_email_sources.py  test_database_without_grouping.py  test_updated_parser.py  view_downloaded_emails.py
(+14 files in other folders)
